fix overflow on X axis on mobile

--- a/assets/style.sass
+++ b/assets/style.sass
@@ -8,6 +8,7 @@ html, body
   padding: 0
   box-sizing: border-box
   background-color: #f0f8ff
+  overflow-x: hidden
 
 footer
   background-color: #b0e0e6 !important
